k8s/app/mongodb.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  namespace: kubedb-dbaas
spec:
  selector:
    app.kubernetes.io/name: mongodbs.kubedb.com
    app.kubernetes.io/instance: kubedb-dbaas-mongodb
  ports:
    - name: mongodb
      port: 27017
      targetPort: 27017
  type: ClusterIP
