k8s/app/redis.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: kubedb-dbaas
spec:
  selector:
    app.kubernetes.io/name: redises.kubedb.com
    app.kubernetes.io/instance: kubedb-dbaas-redis
  ports:
    - name: redis
      port: 6379
      targetPort: 6379
  type: ClusterIP
